<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Histórias Infantis</string>
    <string name="content_authority" translatable="false">com.abobrinha.caixinha</string>
    <string name="history_raw_content" translatable="false">history_raw_content</string>
    <string name="shortcut_intent" translatable="false">shortcut_intent</string>
    <string name="fcm_extra_key" translatable="false">URL</string>

    <string name="up_button">Retornar</string>

    <!-- Labels para os menus da App Bar -->
    <string name="action_refresh">Atualizar</string>
    <string name="action_delete">Remover todos</string>

    <!-- Labels a caixa de diálogo de remoção em lote dos favoritos -->
    <string name="delete_all_favorites_msg">Deseja remover todas as histórias dos favoritos?</string>
    <string name="delete">Remover</string>
    <string name="cancel">Cancelar</string>

    <!-- Labels para as abas do Main Drawer -->
    <string name="category_histories_group">Histórias</string>
    <string name="category_histories_label">Todas</string>
    <string name="category_favorites_label">Favoritas</string>
    <string name="category_settings_label">Configurações</string>
    <string name="category_share_label">Compartilhar</string>
    <string name="category_about_label">Contato</string>

    <!-- Mensagens de erro a serem exibidas na tela principal -->
    <string name="empty_history_list">Nenhuma história encontrada.</string>
    <string name="empty_history_list_no_network">Nenhuma história encontrada. Não há conexão internet.</string>
    <string name="empty_history_list_server_down">Nenhuma história encontrada. O servidor não está retornando nenhum dado.</string>
    <string name="empty_history_list_server_error">Nenhuma história encontrada. O servidor está retornando dados inválidos. Procure por uma nova versão de nosso app.</string>

    <!-- Content Descriptions para o FAB de marcação de favoritos -->
    <string name="fab_add_favorite">Adicionar história aos favoritos</string>
    <string name="fab_remove_remove">Remover história dos favoritos</string>

    <!-- Mensagens para o Toast quando o status de favorito de uma história é modificado -->
    <string name="favorite_added">História adicionada aos favoritos</string>
    <string name="favorite_removed">História removida dos favoritos</string>

    <!-- Descriptions para Navigation Drawer -->
    <string name="close_main_drawer">Menu de navegação principal</string>
    <string name="open_main_drawer">Menu de navegação principal fechado</string>

    <!-- Label para a configuração de ordenação das histórias -->
    <string name="pref_order_label">Ordenação das histórias</string>
    <string name="pref_order_label_title">Título</string>
    <string name="pref_order_label_date">Data</string>
    <string name="pref_order_key" translatable="false">order</string>
    <string name="pref_order_title" translatable="false">title</string>
    <string name="pref_order_date" translatable="false">date</string>

    <!-- Strings relacionadas à exibição de notificações -->
    <string name="notification_new_history">Nova história adicionada.</string>
    <string name="notification_new_histories"><xliff:g id="history_number">%d</xliff:g> novas histórias adicionadas.</string>
    <string name="notification_intent" translatable="false">notification_intent</string>

    <!-- Strings relacionadas à configuração de notificações -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notificações de novas histórias</string>
    <string name="pref_enable_notifications_true">Habilitado</string>
    <string name="pref_enable_notifications_false">Desabilitado</string>

    <!-- Chaves utilizadas em SharedPreferences -->
    <string name="pref_history_status_key" translatable="false">history_status</string>
    <string name="pref_history_category_key" translatable="false">history_category</string>

    <!-- Textos para a funcionalidade de compartilhamento do app -->
    <string name="sharing_text">Gostaria de compartilhar este incrível aplicativo!!</string>
    <string name="sharing_link" translatable="false">https://play.google.com/store/apps/details?id=com.abobrinha.caixinha</string>
    <string name="sharing_subject">Conheça o</string>
    <string name="sharing_title">Compartilhar via</string>
    <string name="sharing_error">Não foi possível compartilhar o aplicativo.</string>

    <!-- Strings relacionadas aos Widgets -->
    <string name="widget_config_label">Widget (Configuração)</string>
    <string name="single_widget_label">Selecione uma história:</string>
    <string name="widget_config_category_label">Quais histórias você gostaria de visualizar?</string>
    <string name="widget_config_order_label">Ordenar por:</string>
    <string name="widget_loading">Carregando dados&#8230;</string>
    <string name="single_widget_error">A história previamente selecionada foi removida. Favor selecionar uma nova.</string>
    <string name="list_widget_error">Nenhuma história encontrada.\n\nTente selecionar outra categoria.</string>
    <string name="widget_button_ok">OK</string>
    <string name="widget_button_cancel">Cancelar</string>
    <string name="widget_fab_description">Configurações do widget</string>

    <!-- Strings relacionadas ao Notification Channel -->
    <string name="channel_name">@string/app_name</string>
    <string name="channel_description">Canal de notificações das Histórias Infantis Abobrinha</string>

</resources>
