<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/category_histories_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_all_histories"
                    android:checked="false"
                    android:icon="@drawable/ic_about"
                    android:title="@string/category_histories_label" />

                <item
                    android:id="@+id/menu_favorites"
                    android:checked="false"
                    android:icon="@drawable/ic_favorite"
                    android:title="@string/category_favorites_label" />
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_settings"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/category_settings_label" />

        <item
            android:id="@+id/menu_share"
            android:checked="false"
            android:icon="@drawable/ic_share"
            android:title="@string/category_share_label" />
        <item
            android:id="@+id/menu_about"
            android:checked="false"
            android:icon="@drawable/ic_about"
            android:title="@string/category_about_label" />
    </group>
</menu>