<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget"
    style="@style/WidgetTheme"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_toolbar_height"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/app_bar_elevation"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/widget_default_padding"
            android:src="@mipmap/ic_launcher_round"
            tools:ignore="contentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/appwidget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_default_padding"
            android:contentDescription="@string/widget_fab_description"
            android:padding="@dimen/widget_fab_padding"
            android:src="@drawable/ic_settings_widget" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/widget_list"
            style="@style/WidgetTheme"
            android:dividerHeight="@dimen/widget_list_divider_size"
            tools:listitem="@layout/list_history_widget_item" />

        <TextView
            android:id="@+id/empty_view"
            style="@style/WidgetTheme.Error"
            android:text="@string/list_widget_error"
            tools:visibility="invisible" />

    </FrameLayout>

</LinearLayout>